compiler/acton/test/syntaxerrors/err32.act
# Missing parenthesis in tuple
def bad_tuple():
    return (1, 2, 3